@@ -13,6 +13,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix Mac OS-X compile issues.  [Joshua Wise]
 
+****	Fix Verilog::EditFiles documentation, bug222. [Evgeni Stavinov]
+
 * Verilog::Language 3.231 2010/02/21
 
 ****	Support 1800-2009 /*comments*/ in define values.
